# kaleidoscope

./: .gitignore  AST.cpp  AST.hpp  CMakeLists.txt  CodeGen.cpp  CodeGen.hpp  Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp  Utilities.cpp  Utilities.hpp  main.cpp  toy
toy.dSYM/Contents/Resources/DWARF/: toy
xbuild/: CMakeCache.txt  cmake_install.cmake
xbuild/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelease
xbuild/Debug/: kaleidoscope
xbuild/Kaleidoscope.build/Debug/ALL_BUILD.build/: Script-FD8E105B83754FDEB20CA1F0.sh  dgph  dgph~
xbuild/Kaleidoscope.build/Debug/Kaleidoscope.build/: dgph  dgph~
xbuild/Kaleidoscope.build/Debug/Kaleidoscope.build/Objects-normal/x86_64/: kaleidoscope.LinkFileList  main.d  main.dia
xbuild/Kaleidoscope.build/Debug/ZERO_CHECK.build/: Script-7BC266BE128641BE8A067D45.sh  dgph  dgph~
xbuild/Kaleidoscope.xcodeproj/: project.pbxproj
xbuild/Kaleidoscope.xcodeproj/project.xcworkspace/xcuserdata/lanza.xcuserdatad/: UserInterfaceState.xcuserstate
xbuild/Kaleidoscope.xcodeproj/xcuserdata/lanza.xcuserdatad/xcschemes/: xcschememanagement.plist
